--- a/html/intro.html
+++ b/html/intro.html
@@ -27,6 +27,6 @@
             <li>Neko</li>
         </ul>
 
-        <img src="./bocchi.jpg" height="200px">
+        <img src="./src/bocchi.jpg" height="200px">
     </body>
 </html>
