--- a/html/tabel.html
+++ b/html/tabel.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latihan tabel</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <table border="1px" align="center">
@@ -17,13 +18,13 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>Poi!</td>
+            <td class="name-red">Poi!</td>
             <td>ecchi</td>
             <td>27 months</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Mimi!</td>
+            <td class="name-red">Mimi!</td>
             <td>ears</td>
             <td>27 months</td>
         </tr>
@@ -35,18 +36,20 @@
                 <td>:</td>
                 <td><input type="text" name="nama" id="" placeholder="nama anda"></td>
             </tr>
+
             <tr>
                 <td>yo age</td>
                 <td>:</td>
                 <td><input type="number" name="age" id="" placeholder="nama anda"></td>
             </tr>
+
             <tr>
                 <td>yo favorit weebs</td>
                 <td>:</td>
                 <td>
                     <select name="" id="">
                         <option value="Neko">Nekopoi</option>
-                        <option value="Neko">Nekopoi</option>
+                        <option value="Kuso">Kusonime</option>
                     </select>
                 </td>
             </tr>
