--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -43,17 +43,20 @@
             <h1>Welcome to ma world</h1>
             <div class="row mt-3">
                 <div class="col-lg-4">
-                    <form action="" method="get" class="">
+                    <form action="" method="get">
                         <div class="row g-3">
                             <div class="col-sm-7">
-                              <input type="text" class="form-control" placeholder="City" aria-label="City">
+                                <input type="text" class="form-control" placeholder="Name" aria-label="Name">
                             </div>
                             <div class="col-sm">
-                              <input type="text" class="form-control" placeholder="State" aria-label="State">
+                              <input type="text" class="form-control" placeholder="Color" aria-label="Color">
                             </div>
                             <div class="col-sm">
-                              <input type="text" class="form-control" placeholder="Zip" aria-label="Zip">
+                              <input type="text" class="form-control" placeholder="Age" aria-label="Age">
                             </div>
+                        </div>
+                        <div class="row-sm mt-5">
+                            <button type="submit" class="btn btn-primary">Sabmit</button>
                         </div>
                     </form>
                 </div>
